# Enki

./: .gitignore  AUDIT_SUMMARY.md  CLAUDE.md  Gemini Review Results.md  GeminiReview.md  LICENSE  PLAYBOOK.md  README.md  enki-architecture.html  enki-workflow.html  pyproject.toml  requirements.txt
codex-summary/: enki-running.md
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: IDE.md  PERSONA.md  SPEC.md  SYNC.md
docs/Enki v3 docs/: KICKOFF.md  PERSONA.md  abzu-memory-spec-v1.2.md  agent-prompt-spec-v1.0.md  em-orchestrator-spec-v1.4.md  enki-ui-constants.py  enki-v3-agent-prompts-v1.5.md  enki-v3-bridge-spec-v1.1.md  enki-v3-design-decisions.md  enki-v3-implementation-spec-v1.2.md  enki-v3-ship-quality-spec-v1.2.md  uru-gates-spec-v1.1.md
docs/specs/: feedback-loop-spec.md
prompts/: architect.md  codex-reviewer.md  devops.md  infosec.md  pm.md  reviewer.md  security-architect.md  technical-writer.md
prompts/lang/: python-dev.md  python-infosec.md  python-qa.md  python-reviewer.md  typescript-dev.md  typescript-infosec.md  typescript-qa.md  typescript-reviewer.md
scripts/: generate-weekly-report.sh  migrate_flat_state_to_db.py  migrate_v2.py  migrate_v3_to_v4.py
scripts/hooks/: enki-post-compact.sh  enki-post-tool-use.sh  enki-pre-compact.sh  enki-pre-tool-use.sh  enki-session-end.sh  enki-session-start.sh  enki-subagent-start.sh  enki-user-prompt.sh
src/enki/: __init__.py  __main__.py  agents_config.py  api_server.py  auth.py  beads.py  cli.py  client.py  code_knowledge.py  config.py  context.py  db.py  embeddings.py  enforcement.py  enforcement_types.py  ereshkigal.py  evolution.py  evolution_analytics.py  evolution_core.py  evolution_store.py  feedback_loop.py  hooks.py  (+33 more)
templates/: PERSONA.md.template
tests/: __init__.py  conftest.py  test_api_server_security.py  test_auth.py  test_beads.py  test_bootstrap.py  test_build_step.py  test_change_request.py  test_claude_md_v4.py  test_code_knowledge.py  test_code_nudge.py  test_context.py  test_db.py  test_em_recall.py  test_embeddings.py  test_enforcement.py  test_enki_wrap_pipeline.py  test_enrichment.py  test_ereshkigal.py  test_evolution.py  test_evolution_two_tier.py  test_feedback_loop.py  test_file_registry.py  test_gates.py  test_gemini_integration.py  test_gemini_review_cli.py  test_hook_security.py  test_hook_versioning.py  test_impl_council.py  test_integration.py  test_integration_pipeline.py  test_links.py  test_local_model.py  test_mcp_handlers.py  test_mcp_orch_pipeline_tools.py  test_mcp_tools_v4.py  test_memory.py  test_memory_v2.py  test_messaging.py  test_migrate_flat_state_to_db.py  (+30 more)
(+88 files in other folders)
