[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enki"
version = "0.1.0"
description = "Second brain for software engineering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
enki = "enki.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/enki"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
