[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enki-ai"
version = "3.0.0"
description = "Persistent second brain and governance framework for Claude Code"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Partha" }]
keywords = ["ai", "second-brain", "claude-code", "memory", "governance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
enki = "enki.cli:main"

[project.urls]
Homepage = "https://github.com/pbparthas/Enki"
Repository = "https://github.com/pbparthas/Enki"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
enki = [
    "prompts/**/*.md",
    "scripts/hooks/enki-*.sh",
    "templates/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
